--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.7"
+        "livewire/livewire": "^3.7",
+        "mallardduck/blade-lucide-icons": "^1.26"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
